The "value" attribute should not be mapped into style.  Bug 157210, aptch by sicking, r=jst, sr=bzbarsky